# llm-notes

./: .gitignore  README.md
MCP/: README.md
MCP/dotnet/: .gitignore  README.md  mcp.json
MCP/dotnet/Docs-Mcp/: Docs-Mcp.sln
MCP/experiments/dotnet/: .gitignore  README.md  mcp.json
MCP/experiments/langchain-mcp-test/: mcp_agent.py
MCP/framework-assistant/: README.md
MCP/langchain-mcp-test/: math_server.py  pyproject.toml
MCP/mcp-translation/: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker compose.yml  pyproject.toml
MCP/mcp-translation/notebooks/: hunyuan_mt_7b_ollama_test.ipynb  rosetta_12b_ollama_test.ipynb  rosetta_4b_model_test.ipynb  test_hunyuan.ipynb  test_nbbl_600m.ipynb  test_nllb_1.3b.ipynb
MCP/mcp-translation/src/mcp_translation/: __main__.py  config.py  prompts.py  server.py  translator.py
MCP/notes/: FastMCP.md  MCP APPs.md  MCP_Architecture.md  WebMCP.md
MCP/rust-sdk/: .gitignore  Cargo-explained.toml  README.md
SemanticKernelAgent/: .gitignore  README.md  SemanticKernelAgent.sln
SemanticKernelAgent/AppHost/: AppHost.csproj  Program.cs
SemanticKernelAgent/McpExample/: McpExample.csproj  Program.cs  appsettings.json
SemanticKernelAgent/SemanticKernelAgent/: Program.cs  SemanticKernelAgent.csproj  appsettings.json
SemanticKernelAgent/notes/: ASP.Net Core + Semantic Kernel.md  ChatHistory ExecutionSettings.md  IChatCompletionService.md
experiments/conda_rag/: test.ipynb
experiments/langchain_env/: Advanced_Retrieval.ipynb  Data_Processing.ipynb  DocumentLoader_RAG.ipynb  LCEL.ipynb  Vectorstore_Retrieval.ipynb  test.ipynb
experiments/notes/: Gradio_basics.md  LCEL_basics.md  Langsmith.md  Miniconda_basics.md  Poetry_basics.md
langchain/: .gitignore  README.md
langchain/notes/: Advanced_Search_Techniques_In_RAG.md  Chroma_FAISS.md  Embedding_Models.md  Evaluation.md  LangChain_Document_Loaders.md  LangChain_Text_Splitters.md  LangChain_basics.md  RAG_Search_Engines.md  RAG_basics.md  Understanding_Similarity_And_Relevance_Score.md
langchain_v1/: README.md
langchain_v1/samples/: README.md  pyproject.toml
langchain_v1/samples/src/samples/: 0_agent.ipynb  1_model.ipynb  3_messages.ipynb  4_short_term_memory.ipynb  5_streaming.ipynb  6_long_term_memory.ipynb  quick_start.ipynb  react.ipynb  sample_agent.ipynb
langgraph/: .gitignore  README.md
langgraph/experiments/agent-service/: pyproject.toml
langgraph/experiments/agent-service/src/app/: main.py
langgraph/experiments/agent-service/src/app/api/llm/: query.py
langgraph/experiments/agent-service/src/app/core/: config.py
langgraph/experiments/agent-service/src/app/routers/: chats.py  query.py
langgraph/experiments/agent-service/src/app/schemas/: agent_schema.py  chat.py
langgraph/experiments/agent-service/src/app/services/: agent_service.py  chat_service.py  llm_service.py
langgraph/experiments/docs-service/: pyproject.toml
langgraph/experiments/docs-service/src/docs/: init.py
langgraph/experiments/langgraph_agent/: main.py  pyproject.toml  requirements.txt
langgraph/experiments/langgraph_agent/course/: LangChain_ToolCalling.ipynb  LangGraph_AgenticRAG.ipynb  LangGraph_Leagal_PDF_QA.ipynb  LangGraph_MessageGraph.ipynb  LangGraph_ReAct_Memory.ipynb  LangGraph_StateGraph.ipynb
langgraph/experiments/langgraph_agent/langgraph_agent/: openai_chain.py
langgraph/notes/: Conditional_Edge.md  Few_Shot_Prompting.md  LangChainBuiltinTools.md  LangChainTool.md  LangChainToolDef.md  LangGraph.md  LangGraph_MemorySaver.md  LangGraph_ReAct_Agent.md  LangGraph_Subgraphs.md  LangGraph_ToolNode.md  MessageGraph.md  ReAct_Agent.md  StateGraph.md  State_Reducer.md  ToolCalling.md
notes/: A2A.md  Adaptive_RAG.md  Advanced_Search_Methods.md  Corrective_RAG.md  Harness Engineering.md  Human_in_the_Loop.md  Langchain_Rag_Components.md  Multi-Agent System.md  RAG_Evaluation.md  SSM MoE.md  Self_RAG.md  Skills.md  agent.md  transformer_onnx.md  vLLM.md
notes/RAG/: BM25.md
notes/python/: Python Environment Setup.md  mamba commands.md
skills/: README.md
skills/notes/: MCP와 Skills의 관계.md
(+46 files in other folders)
