[project]
name = "mcp-translation"
version = "0.1.0"
description = "번역 MCP 서버"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastmcp>=2.0.0",      # MCP 서버
    "ollama>=0.6.0",       # Ollama Python SDK
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
]

[tool.poetry]
packages = [{ include = "mcp_translation", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"