[project]
name = "samples"
version = "0.1.0"
description = ""
authors = [
    {name = "jhlee",email = "39754095+everError@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=1.0.0a,<2.0.0)",
    #
    "langchain-core (>=1.0.0a,<2.0.0)",
    "langchain-openai (>=1.0.0a,<2.0.0)",
    #
    "langmem (>=0.0.29,<1.0.0)",
    # v1a version error
    #"langchain-postgres (>=0.0.0,<1.0.0)"
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "samples", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
