[project]
name = "docs-service"
version = "0.1.0"
description = ""
authors = [
    {name = "jhlee"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "chromadb (>=1.0.20,<2.0.0)"
]

[tool.poetry]
packages = [{include = "docs_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
